fix missing grid containers in all sections, fix intro indent in intro section, header align left in why section, indent logo in footer section

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,31 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
+	<meta charset="utf-8">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Encantado</title>
+	<meta name="author" content="Encantando - BE Creativos">
+	<meta name="description" content="Diseño de páginas web profesionales en Torrevieja">
+
+	<link rel="apple-touch-icon" sizes="57x57" href="/graphics/encantado-logo.ico/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/graphics/encantado-logo.ico/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/graphics/encantado-logo.ico/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/graphics/encantado-logo.ico/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/graphics/encantado-logo.ico/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/graphics/encantado-logo.ico/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/graphics/encantado-logo.ico/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/graphics/encantado-logo.ico/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/graphics/encantado-logo.ico/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/graphics/encantado-logo.ico/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/graphics/encantado-logo.icofavicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/graphics/encantado-logo.ico/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/graphics/encantado-logo.ico/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+
 </head>
 <body>
 
@@ -109,71 +130,74 @@
 	</div>
 </section>
 
-
 <section class="projects">
-	<div class="grid-x grid-margin-x grid-margin-y">
-		<div class="medium-6 large-4 cell"> 
-			<p class="title">Nombre projecto</p>
-			<p class="description">Web responsive</p>
-		</div>
+	<div class="grid-container full">
+		<div class="grid-x grid-margin-x grid-margin-y">
+			<div class="medium-6 large-4 cell"> 
+				<p class="title">Nombre projecto</p>
+				<p class="description">Web responsive</p>
+			</div>
 
-		<div class="medium-6 large-4 cell"> 
-			<p class="title">Nombre projecto</p>
-			<p class="description">Web responsive</p>
-		</div>
+			<div class="medium-6 large-4 cell"> 
+				<p class="title">Nombre projecto</p>
+				<p class="description">Web responsive</p>
+			</div>
 
-		<div class="medium-6 large-4 cell"> 
-			<p class="title">Nombre projecto</p>
-			<p class="description">Web responsive</p>
-		</div>
+			<div class="medium-6 large-4 cell"> 
+				<p class="title">Nombre projecto</p>
+				<p class="description">Web responsive</p>
+			</div>
 
-		<div class="medium-6 large-4 cell"> 
-			<p class="title">Nombre projecto</p>
-			<p class="description">Web responsive</p>
-		</div>
+			<div class="medium-6 large-4 cell"> 
+				<p class="title">Nombre projecto</p>
+				<p class="description">Web responsive</p>
+			</div>
 
-		<div class="medium-6 large-4 cell"> 
-			<p class="title">Nombre projecto</p>
-			<p class="description">Web responsive</p>
-		</div>
-		
-		<div class="medium-6 large-4 cell"> 
-			<p class="title">Nombre projecto</p>
-			<p class="description">Web responsive</p>
+			<div class="medium-6 large-4 cell"> 
+				<p class="title">Nombre projecto</p>
+				<p class="description">Web responsive</p>
+			</div>
+
+			<div class="medium-6 large-4 cell"> 
+				<p class="title">Nombre projecto</p>
+				<p class="description">Web responsive</p>
+			</div>
 		</div>
 	</div>
 </section>
 
 <section class="intro">
 	<div id="triangle-grey" class="show-for-large"></div>
-	<div class="grid-x">
-		<div class="medium-12 large-8 cell">
-			<h2>
-				Diseño Web de alta calidad <br>
-				para gente que toma su negocio en serio
-			</h2>
-			<p class="info">
-				Estamos especializados en el diseño de paginas web profesionales, 
-				usando los últimos estándares y soluciones de desarrollo web para
-				que pueda promocionar su negocio a través de Internet. 
-			</p>
+	<div class="grid-container">
+		<div class="grid-x">
+			<div class="medium-12 large-8 cell">
+				<h2>
+					Diseño Web de alta calidad <br>
+					para gente que toma su negocio en serio
+				</h2>
+				<p class="info">
+					Estamos especializados en el diseño de paginas web profesionales, 
+					usando los últimos estándares y soluciones de desarrollo web para
+					que pueda promocionar su negocio a través de Internet. 
+				</p>
+		
+				<p class="audience">
+					Desde el diseño más sencillo hasta grandes aplicaciones dinámicas,
+					tiendas online o webs para inmobiliarias.
+				</p>
+		
+				<p class="experience">
+					Contamos con <b>más de 12 años de experiencia</b> en el diseño y desarrollo
+					de páginas web, que no sólo parecen buenos sino que son también
+					técnicamente correctos. Además nos encargamos de que su página web
+					esté <b>optimizada para los motores de búsqueda</b> y le proporcionamos
+					un alojamiento web ajustado a sus necesidades.
+				</p>
+			</div>
 	
-			<p class="audience">
-				Desde el diseño más sencillo hasta grandes aplicaciones dinámicas,
-				tiendas online o webs para inmobiliarias.
-			</p>
-	
-			<p class="experience">
-				Contamos con <b>más de 12 años de experiencia</b> en el diseño y desarrollo
-				de páginas web, que no sólo parecen buenos sino que son también
-				técnicamente correctos. Además nos encargamos de que su página web
-				esté <b>optimizada para los motores de búsqueda</b> y le proporcionamos
-				un alojamiento web ajustado a sus necesidades.
-			</p>
-		</div>
-
-		<div class="large-4 cell show-for-large">
-			<img src="graphics/831284068.jpg" alt="electronics" title="electronics">
+			<div class="large-4 cell show-for-large">
+				<img src="graphics/831284068.jpg" alt="electronics" title="electronics">
+			</div>
 		</div>
 	</div>
 </section>
@@ -182,39 +206,42 @@
 	<div id="triangle-left" class="show-for-large"></div>
 	<div id="triangle-middle" class="show-for-large"></div>
 	<div id="triangle-right" class="show-for-large"></div>
-	<h4>Servicios</h4>
-	<hr>
-	<div class="grid-x grid-margin-x">
-		<div class="small-12 medium-4 large-4 cell">
-			<dl>
-				<dt>Diseño Web</dt>
-				<dd><a href="#">Desarrollo Web</a>,</dd>
-				<dd><a href="#">Diseño Web</a>,</dd>
-				<dd><a href="#">accesibilidad y usabilidad</a>.</dd>
-			</dl>
-		</div>
-
-		<div class="small-12 medium-4 large-4 cell">
-			<dl>
-				<dt>Diseño gráfico</dt>
-				<dd>Soluciones creativas:</dd>
-				 <dd><a href="#">Diseño gráfico</a>,</dd>
-				<dd><a href="#">fotografía</a>,</dd>
-				<dd><a href="#">publicidad y logotipos</a>.</dd>
-			</dl>
-		</div>
-
-		<div class="small-12 medium-4 large-4 cell">
-			<dl>
-				<dt>Mantenimiento Web</dt>
-				<dd><a href="#">Sistemas de gestión de contenido (CMS)</a></dd>
-				<dd>y <a href="#">gestión de relaciones con clientes (CRM)</a>.</dd>
-			</dl>
+	<div class="grid-container">
+		<h4>Servicios</h4>
+		<hr>
+		<div class="grid-x grid-margin-x">
+			<div class="small-12 medium-4 large-4 cell">
+				<dl>
+					<dt>Diseño Web</dt>
+					<dd><a href="#">Desarrollo Web</a>,</dd>
+					<dd><a href="#">Diseño Web</a>,</dd>
+					<dd><a href="#">accesibilidad y usabilidad</a>.</dd>
+				</dl>
+			</div>
+	
+			<div class="small-12 medium-4 large-4 cell">
+				<dl>
+					<dt>Diseño gráfico</dt>
+					<dd>Soluciones creativas:</dd>
+						<dd><a href="#">Diseño gráfico</a>,</dd>
+					<dd><a href="#">fotografía</a>,</dd>
+					<dd><a href="#">publicidad y logotipos</a>.</dd>
+				</dl>
+			</div>
+	
+			<div class="small-12 medium-4 large-4 cell">
+				<dl>
+					<dt>Mantenimiento Web</dt>
+					<dd><a href="#">Sistemas de gestión de contenido (CMS)</a></dd>
+					<dd>y <a href="#">gestión de relaciones con clientes (CRM)</a>.</dd>
+				</dl>
+			</div>
 		</div>
 	</div>
 </section>
 
 <section class="why">
+	<div class="grid-container">
 		<div class="grid-x grid-margin-x">
 			<div class="medium-12 large-3 cell">
 				<h4>Por qué eligirnos?</h4>
@@ -227,25 +254,25 @@
 						Sabemos que si hacemos <u>un buen trabajo</u>, 
 						usted <u>mejora su negocio</u>.
 					</li>
-
+	
 					<li>
 						Lo enfocamos de manera profesional.
 						Entregamos <u>trabajos de calidad y en plazo</u>.
 					</li>
-
+	
 					<li>
 						Realizamos un trabajo con una <u>excelente calidad-precio</u>.
 					</li>
 				</ul>
 			</div>
-
+	
 			<div class="medium-6 large-5 cell cross">
 				<ul>
 					<li>
 						No creemos en el trabajo rápido y descuidado. 
 						Realizamos <u>un trabajo sólido</u>.
 					</li>
-
+	
 					<li>
 						No creemos en soluciones prefabricadas. Cada trabajo es 
 						<u>único y personalizado</u> de acuerdo con las necesidades de cada cliente.
@@ -253,112 +280,117 @@
 				</ul>
 			</div>
 		</div>
+	</div>
 </section>
 
-<section class="contact grid-x">
-	<div class="small-5 cell">
-		<h4>Si buscas:</h4>
-		<h4 class="above">Si buscas:</h4>
-		<p>
-			Diseño de paginas web, con cada detalle cuidado al máximo.
-			Hecho a medida, con un diseño único para diferenciarse claramente
-			de la competencia. Facil de mantener. Multilingüe. Responsivo,
-			adaptando a cualquier pantalla o dispositivo.
-			Y preparado para conseguir clientes y vender su producto.
-			<span></span>			
-		</p>
-	</div>	
-
-	<div class="small-7 cell">
-		<div id="callout" class="callout success hide" data-closable>
-			<h5>Gracias por tu mensaje</h5>
-			<button class="close-button" aria-label="Dismiss alert" type="button" data-close>
-				<span aria-hidden="true">&times;</span>
-			</button>
-		</div>
-
-		<h4>Pide su presupuesto</h4>
-		<hr>
-
-		<form id="contact-form" class="multi-form" data-abide novalidate action="#contact-form" method="get">
-			<fieldset class="active">
-				<div class="grid-x">
-					<div class="small-12 medium-6 cell">
-						<label for="nombre">Nombre*</label>
-						<input type="text" id="nombre" name="nombre" required pattern="[a-zA-Z\s]+">
+<section class="contact">
+<div class="grid-container">
+		<div class="grid-x grid-margin-x">
+				<div class="small-5 cell">
+					<h4>Si buscas:</h4>
+					<h4 class="above">Si buscas:</h4>
+					<p>
+						Diseño de paginas web, con cada detalle cuidado al máximo.
+						Hecho a medida, con un diseño único para diferenciarse claramente
+						de la competencia. Facil de mantener. Multilingüe. Responsivo,
+						adaptando a cualquier pantalla o dispositivo.
+						Y preparado para conseguir clientes y vender su producto.
+						<span></span>			
+					</p>
+				</div>	
+			
+				<div class="small-7 cell">
+					<div id="callout" class="callout success hide" data-closable>
+						<h5>Gracias por tu mensaje</h5>
+						<button class="close-button" aria-label="Dismiss alert" type="button" data-close>
+							<span aria-hidden="true">&times;</span>
+						</button>
 					</div>
-
-					<div class="small-12 medium-6 cell">
-						<label for="apellido">Apellido(s)*</label>
-						<input type="text" id="apellido" name="apellido" required pattern="[a-zA-Z\s]+">
+			
+					<h4>Pide su presupuesto</h4>
+					<hr>
+			
+					<form id="contact-form" class="multi-form" data-abide novalidate action="#contact-form" method="get">
+						<fieldset class="active">
+							<div class="grid-x">
+								<div class="small-12 medium-6 cell">
+									<label for="nombre">Nombre*</label>
+									<input type="text" id="nombre" name="nombre" required pattern="[a-zA-Z\s]+">
+								</div>
+			
+								<div class="small-12 medium-6 cell">
+									<label for="apellido">Apellido(s)*</label>
+									<input type="text" id="apellido" name="apellido" required pattern="[a-zA-Z\s]+">
+								</div>
+			
+								<div class="small-12 medium-6 cell">
+									<label for="email">E-mail*</label>
+									<input type="text" id="email" name="email" required pattern="email">
+								</div>
+			
+								<div class="small-12 medium-6 cell">
+									<label for="telefono">Teléfono*</label>
+									<input type="text" id="telefono" name="telefono" required pattern="number">
+								</div>
+			
+								<div class="small-12 medium-6 cell">
+									<label for="empresa">Empresa</label>
+									<input type="text" id="empresa" name="empresa">
+								</div>
+			
+								<div class="small-12 medium-6 cell">
+									<label for="localidad">Localidad*</label>
+									<input type="text" id="localidad" name="localidad" required pattern="[a-zA-Z\s]+">
+								</div>
+							</div>
+						</fieldset>
+			
+						<fieldset>
+							<div class="grid-x">
+								<div class="small-12 cell">
+									<label for="categoria">Categoría*
+										<select id="categoria" name="categoria" required>
+											<option value=""></option>
+											<option value="immo">immo</option>
+											<option value="hotel">hotel</option>
+											<option value="ventas">ventas</option>
+										</select>
+									</label>
+								</div>
+							</div>
+			
+							<div class="grid-x">
+								<div class="small-12 cell">
+									<label for="descripcion">Descripción
+										<textarea rows="5" id="descripcion" name="descripcion"></textarea>
+									</label>
+								</div>
+							</div>
+						</fieldset>
+			
+						<div class="buttons">
+							<a class="prev">
+								<div class="circle">
+									<img src="graphics/svg/noun_1086550.svg" alt="Next" type="image/svg+xml"/>
+								</div>
+							</a>
+			
+							<a class="next" form="myform">
+								<div class="circle">
+									<img src="graphics/svg/noun_1086550.svg" alt="Next" type="image/svg+xml"/>
+								</div>
+							</a>
+			
+							<button class="submit">
+								<div class="circle">
+									<img src="graphics/svg/send.svg" alt="Next" type="image/svg+xml"/>
+								</div>
+							</button>
+						</div>
+			
+					</form>
 					</div>
-
-					<div class="small-12 medium-6 cell">
-						<label for="email">E-mail*</label>
-						<input type="text" id="email" name="email" required pattern="email">
-					</div>
-
-					<div class="small-12 medium-6 cell">
-						<label for="telefono">Teléfono*</label>
-						<input type="text" id="telefono" name="telefono" required pattern="number">
-					</div>
-
-					<div class="small-12 medium-6 cell">
-						<label for="empresa">Empresa</label>
-						<input type="text" id="empresa" name="empresa">
-					</div>
-
-					<div class="small-12 medium-6 cell">
-						<label for="localidad">Localidad*</label>
-						<input type="text" id="localidad" name="localidad" required pattern="[a-zA-Z\s]+">
-					</div>
-				</div>
-			</fieldset>
-
-			<fieldset>
-				<div class="grid-x">
-					<div class="small-12 cell">
-						<label for="categoria">Categoría*
-							<select id="categoria" name="categoria" required>
-								<option value=""></option>
-								<option value="immo">immo</option>
-								<option value="hotel">hotel</option>
-								<option value="ventas">ventas</option>
-							</select>
-						</label>
-					</div>
-				</div>
-
-				<div class="grid-x">
-					<div class="small-12 cell">
-						<label for="descripcion">Descripción
-							<textarea rows="5" id="descripcion" name="descripcion"></textarea>
-						</label>
-					</div>
-				</div>
-			</fieldset>
-
-			<div class="buttons">
-				<a class="prev">
-					<div class="circle">
-						<img src="graphics/svg/noun_1086550.svg" alt="Next" type="image/svg+xml"/>
-					</div>
-				</a>
-
-				<a class="next" form="myform">
-					<div class="circle">
-						<img src="graphics/svg/noun_1086550.svg" alt="Next" type="image/svg+xml"/>
-					</div>
-				</a>
-
-				<button class="submit">
-					<div class="circle">
-						<img src="graphics/svg/send.svg" alt="Next" type="image/svg+xml"/>
-					</div>
-				</button>
 			</div>
-
-		</form>
 	</div>
 </section>
 
@@ -407,7 +439,7 @@
 				</div>
 			</div>
 		
-			<div class="small-12 medium-4 cell footer-padding">
+			<div class="medium-4 cell footer-padding">
 				<div class="grid-x">
 					<div class="medium-12 large-4 cell">
 						<a href="#Inicio">Inicio</a> <br>
