add favicons with manifest and browserconfig and configuration

--- a/src/index.html
+++ b/src/index.html
@@ -8,24 +8,23 @@
 	<meta name="author" content="Encantando - BE Creativos">
 	<meta name="description" content="Diseño de páginas web profesionales en Torrevieja">
 
-	<link rel="apple-touch-icon" sizes="57x57" href="/graphics/encantado-logo.ico/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/graphics/encantado-logo.ico/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/graphics/encantado-logo.ico/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/graphics/encantado-logo.ico/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/graphics/encantado-logo.ico/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/graphics/encantado-logo.ico/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/graphics/encantado-logo.ico/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/graphics/encantado-logo.ico/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/graphics/encantado-logo.ico/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="/graphics/encantado-logo.ico/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/graphics/encantado-logo.icofavicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/graphics/encantado-logo.ico/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/graphics/encantado-logo.ico/favicon-16x16.png">
-	<link rel="manifest" href="/manifest.json">
+	<link rel="apple-touch-icon" sizes="57x57" href="graphics/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="graphics/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="graphics/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="graphics/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="graphics/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="graphics/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="graphics/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="graphics/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="graphics/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="graphics/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="graphics/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="graphics/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="graphics/favicon-16x16.png">
+	<link rel="manifest" href="graphics/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="msapplication-TileImage" content="graphics/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
-
 </head>
 <body>
 
@@ -33,7 +32,6 @@
 	<div class="small-3 cell container-logo">
 		<div class="logo">
 			<a href="#"><img class="image" src="graphics/svg/encantado.svg" alt="encantado"  ></a>
-			
 			<div class="text">
 				<a href="#" class="title">encantado</a><br>
 				<a href="#" class="subtitle">diseño web torrevieja</a>
