created all pages for header and footer menu, createmenu for header menu on mobile, createmainmenu for header and footer to show the correct list, changed footer links into li for the function and included css for it, back button for submenu with translation, fix social icons in seperate div for margin (before nth-child but is not responsive), hero slider: translations and articles, inicio title

--- a/_slicing/src/index.html
+++ b/_slicing/src/index.html
@@ -20,6 +20,7 @@
 	<link href="graphics/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
 	<link href="graphics/favicon-96x96.png" rel="icon" sizes="96x96" type="image/png">
 	<link href="graphics/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+	<link href="graphics/favicon.ico" rel="shortcut icon" />
 	<link href="graphics/manifest.json" rel="manifest">
 	<meta content="#ffffff" name="msapplication-TileColor">
 	<meta content="graphics/ms-icon-144x144.png" name="msapplication-TileImage">
@@ -138,15 +139,6 @@
 		<div class="small-3 cell container-icons">
 			<ul class="menu align-right icons">
 				<li>
-					<a class="circle instagram" href="#"><img alt="instagram" src="graphics/svg/instagram.svg"></a>
-				</li>
-				<li>
-					<a class="circle linkedin" href="#"><img alt="linkedin" src="graphics/svg/linkedin.svg"></a>
-				</li>
-				<li>
-					<a class="circle facebook" href="#"><img alt="facebook" src="graphics/svg/facebook.svg"></a>
-				</li>
-				<li>
 					<a class="is-active circle" href="#">es</a>
 				</li>
 				<li>
@@ -154,6 +146,17 @@
 				</li>
 				<li>
 					<a class="circle" href="#">nl</a>
+				</li>
+			</ul>
+			<ul class="menu align-right icons social-icons">
+				<li>
+					<a class="circle instagram" href="#"><img alt="instagram" src="graphics/svg/instagram.svg"></a>
+				</li>
+				<li>
+					<a class="circle linkedin" href="#"><img alt="linkedin" src="graphics/svg/linkedin.svg"></a>
+				</li>
+				<li>
+					<a class="circle facebook" href="#"><img alt="facebook" src="graphics/svg/facebook.svg"></a>
 				</li>
 			</ul>
 		</div>
@@ -169,8 +172,8 @@
 				profesionales en Torrevieja</h1>
 				<div id="typed-strings">
 					<p>diseño y desarrollo de páginas web</p>
-					<p>.....................</p>
-					<p>/////////////////////</p>
+					<p>webs inmobiliaria com CMS y CRM</p>
+					<p>posicionamiento web / SEO</p>
 				</div>
 				<p>Expertos en <span class="typer"></span></p>
 			</div>
@@ -213,8 +216,8 @@
 						<h2>Diseño Web de alta calidad<br>
 						para gente que toma su negocio en serio</h2>
 						<p class="info">Estamos especializados en el diseño de paginas web profesionales, usando los últimos estándares y soluciones de desarrollo web para que pueda promocionar su negocio a través de Internet.</p>
-						<p class="audience">Desde el diseño más sencillo hasta grandes aplicaciones dinámicas, tiendas online o webs para inmobiliarias.</p>
-						<p class="experience">Contamos con <b>más de 12 años de experiencia</b> en el diseño y desarrollo de páginas web, que no sólo parecen buenos sino que son también técnicamente correctos. Además nos encargamos de que su página web esté <b>optimizada para los motores de búsqueda</b> y le proporcionamos un alojamiento web ajustado a sus necesidades.</p>
+						<p>Desde el diseño más sencillo hasta grandes aplicaciones dinámicas, tiendas online o webs para inmobiliarias.</p>
+						<p>Contamos con <b>más de 12 años de experiencia</b> en el diseño y desarrollo de páginas web, que no sólo parecen buenos sino que son también técnicamente correctos. Además nos encargamos de que su página web esté <b>optimizada para los motores de búsqueda</b> y le proporcionamos un alojamiento web ajustado a sus necesidades.</p>
 					</div>
 					<div class="large-4 cell show-for-large"><img alt="electronics" src="graphics/831284068.jpg" title="electronics"></div>
 				</div>
@@ -245,7 +248,7 @@
 					<div class="small-12 medium-4 large-4 cell">
 						<dl>
 							<dt>Diseño gráfico</dt>
-							<dd>Soluciones creativas:</dd>
+							<dd><p>Soluciones creativas:</p></dd>
 							<dd>
 								<a href="#">Diseño gráfico</a>,
 							</dd>
@@ -406,16 +409,20 @@
 				<div class="medium-4 cell footer-padding">
 					<div class="grid-x">
 						<div class="medium-12 large-4 cell">
-							<a href="#Inicio">Inicio</a><br>
-							<a href="#Acerca">Acerca</a><br>
-							<a href="#Trabajos">Trabajos</a><br>
-							<a href="#Contacto">Contacto</a><br>
+							<ul>
+								<li><a href="#Inicio">Inicio</a></li>
+								<li><a href="#Acerca">Acerca</a></li>
+								<li><a href="#Trabajos">Trabajos</a></li>
+								<li><a href="#Contacto">Contacto</a></li>
+							</ul>
 						</div>
 						<div class="medium-12 large-8 cell">
-							<a href="#disenio">Diseño web Torrevieja</a><br>
-							<a href="#desarrollo">Desarrollo web</a><br>
-							<a href="#posicionamiento">Posicionamiento web</a><br>
-							<a href="#fotografia">Fotografía</a><br>
+							<ul>
+								<li><a href="#disenio">Diseño web Torrevieja</a></li>
+								<li><a href="#desarrollo">Desarrollo web</a></li>
+								<li><a href="#posicionamiento">Posicionamiento web</a></li>
+								<li><a href="#fotografia">Fotografía</a></li>
+							</ul>
 						</div>
 					</div>
 				</div>
