GetFooterArray function gives array of footer menu elements  and with a foreach splits them in 2 and put them in a separate div. aProjects gives a list of projects with the id, url, thumbnail, name and description. This list is generated by the projects that are created in the dashboard under projects. Fixed an error for the images in the project section: Because the div is working with a 4:3 ratio it uses padding bottom and not a height. If you then put an image in it it won’t work because the div has no height if you want to cover the image in the div. I used position absolute with the object position to top and center. Landscape images are shown fully because of the aspect ratio. For portret images the aspect ratio is not good. Solution: When you hover on the div the object position turns to bottom center. This let you see the portret images fully without disturbing the portret images. Once you click on the image you will be referred to the website of the project. Added a transition on the hover for the images.

--- a/_slicing/src/index.html
+++ b/_slicing/src/index.html
@@ -182,15 +182,18 @@
 			<div class="grid-container full">
 				<div class="grid-x grid-margin-x grid-margin-y">
 					<div class="medium-6 large-4 cell">
+						<img src="graphics/featured1.jpg" alt="featured">
+						<p class="title">Nombre test</p>
+						<p class="description">Web responsive</p>
+					</div>
+					<div class="medium-6 large-4 cell">
+						<img class="myimage" src="graphics/featured2.jpg" alt="featured">
 						<p class="title">Nombre projecto</p>
 						<p class="description">Web responsive</p>
 					</div>
 					<div class="medium-6 large-4 cell">
-						<p class="title">Nombre projecto</p>
-						<p class="description">Web responsive</p>
-					</div>
-					<div class="medium-6 large-4 cell">
-						<p class="title">Nombre projecto</p>
+						<img src="graphics/featured1.jpg" alt="featured">
+						<p class="title">Nombre test</p>
 						<p class="description">Web responsive</p>
 					</div>
 					<div class="medium-6 large-4 cell">
