--- a/_slicing/src/index.html
+++ b/_slicing/src/index.html
@@ -182,9 +182,14 @@
 			<div class="grid-container full">
 				<div class="grid-x grid-margin-x grid-margin-y">
 					<div class="medium-6 large-4 cell">
-						<img src="graphics/featured1.jpg" alt="featured">
-						<p class="title">Nombre test</p>
-						<p class="description">Web responsive</p>
+						<a href="">
+							<img src="graphics/featured1.jpg" alt="featured">
+							<div class="overlay" style="background-color:red;">
+							</div>
+							<p class="title">Nombre projecto</p>
+							<p class="description">Web responsive</p>
+						</a>
+						
 					</div>
 					<div class="medium-6 large-4 cell">
 						<img class="myimage" src="graphics/featured2.jpg" alt="featured">
@@ -432,9 +437,15 @@
 			</div>
 		</div>
 	</footer>
+	<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
 	<script src="src/js/particles.js">
 	</script> 
 	<script src="src/js/particles-config.js">
+	</script>
+	<script src="src/js/imgLiquid-min.js">
 	</script>
 </body>
 </html>
